<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background2"
    android:gravity="center">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:gravity="center"
                android:text="@string/gameover"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:gravity="center"
                android:text="@string/score"
                android:textSize="25sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/play_again"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/btn_gradient"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/playagain"
                android:textColor="@color/white"
                app:backgroundTint="@null"/>

            <android.widget.Button
                android:id="@+id/back_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/darkRed"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/backmenu"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>