<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:gravity="center">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:background="@drawable/piano" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="48sp" />

            <android.widget.Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/btn_gradient"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/btn_home"
                android:textColor="@color/black" />

            <android.widget.Button
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/btn_gradient"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/settings" />

            <android.widget.Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/darkRed"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/exit"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>