<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    tools:context=".view.fragment.main.MainFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@android:color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/righteous"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="50sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:gravity="center"
                            android:padding="20dp"
                            android:text="@string/health_count"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="26sp" />

                        <RadioGroup
                            android:id="@+id/health_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/health_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat"
                                android:text="@string/one" />

                            <RadioButton
                                android:id="@+id/health_3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat"
                                android:text="@string/three" />

                            <RadioButton
                                android:id="@+id/health_5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat"
                                android:text="@string/five" />

                        </RadioGroup>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <Button
                        android:id="@+id/btnToHome1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_gradient"
                        android:text="Подтвердить"
                        android:textAllCaps="false"
                        app:backgroundTint="@null"/>

                </LinearLayout>

            </ScrollView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>